
name: cookie-jar
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2012 Karl Voelker
stability: unstable
homepage: https://github.com/ktvoelker/cookie-jar
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: An HTTP cookie client based on RFC-6265
description: TODO
category: Web
author: Karl Voelker <ktvoelker@gmail.com>

Library
  build-depends:
    base >= 3 && < 5,
    bytestring -any,
    http-types -any,
    time -any,
    text -any,
    case-insensitive -any,
    split -any,
    gnuidn -any
  exposed-modules:
    Network.DNS.Public
    Web.CookieJar
  other-modules:
    Network.DNS.Public.Types
    Web.CookieJar.Parser
    Web.CookieJar.Parser.Date
    Web.CookieJar.Parser.Util
    Web.CookieJar.Types
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    DataKinds
    KindSignatures
    TypeFamilies
    MultiParamTypeClasses
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns

Test-Suite cookie-jar-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src test
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >= 3 && < 5,
    bytestring -any,
    http-types -any,
    time -any,
    text -any,
    case-insensitive -any,
    split -any,
    gnuidn -any,
    HUnit -any,
    mtl -any
  default-extensions:
    DataKinds
    KindSignatures
    TypeFamilies
    MultiParamTypeClasses
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns

