
name: cookie-jar
version: 0.2.0.0
cabal-version: >= 1.10
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2012 Karl Voelker
stability: unstable
homepage: https://github.com/ktvoelker/cookie-jar
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: An HTTP cookie client based on RFC 6265
description:
  This package implements algorithms for HTTP user-agents described in
  section 5 of RFC 6265, \"HTTP State Management Mechanism\"
  (<http://www.rfc-editor.org/rfc/rfc6265.txt>).
  .
  The main module is "Web.CookieJar". Support functions for determining whether
  a domain name is a suffix open for public registration are in
  "Network.DNS.Public".
category: Web
author: Karl Voelker <ktvoelker@gmail.com>

Library
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9 && < 0.10,
    http-types >= 0.7 && < 0.8,
    time >= 1.4 && < 1.5,
    text >= 0.11 && < 0.12,
    case-insensitive >= 0.4 && < 0.5,
    gnuidn >= 0.2 && < 0.3
  exposed-modules:
    Network.DNS.Public
    Web.CookieJar
  other-modules:
    Network.DNS.Public.Types
    Web.CookieJar.Parser
    Web.CookieJar.Parser.Date
    Web.CookieJar.Parser.Util
    Web.CookieJar.Types
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    DataKinds
    KindSignatures
    TypeFamilies
    MultiParamTypeClasses
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns

Test-Suite cookie-jar-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src test
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9 && < 0.10,
    http-types >= 0.7 && < 0.8,
    time >= 1.4 && < 1.5,
    text >= 0.11 && < 0.12,
    case-insensitive >= 0.4 && < 0.5,
    gnuidn >= 0.2 && < 0.3,
    HUnit >= 1.2 && < 1.3,
    mtl >= 2.1 && < 2.2
  default-extensions:
    DataKinds
    KindSignatures
    TypeFamilies
    MultiParamTypeClasses
    FlexibleInstances
    FlexibleContexts
    StandaloneDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns

